; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-mpath.c___must_push_back.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-mpath.c___must_push_back.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.multipath = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.multipath*)* @__must_push_back to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__must_push_back(%struct.multipath* %0) #0 {
  %2 = alloca %struct.multipath*, align 8
  store %struct.multipath* %0, %struct.multipath** %2, align 8
  %3 = load %struct.multipath*, %struct.multipath** %2, align 8
  %4 = getelementptr inbounds %struct.multipath, %struct.multipath* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.multipath*, %struct.multipath** %2, align 8
  %7 = getelementptr inbounds %struct.multipath, %struct.multipath* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %5, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load %struct.multipath*, %struct.multipath** %2, align 8
  %12 = getelementptr inbounds %struct.multipath, %struct.multipath* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  %14 = call i64 @dm_noflush_suspending(i32 %13)
  %15 = icmp ne i64 %14, 0
  br label %16

16:                                               ; preds = %10, %1
  %17 = phi i1 [ false, %1 ], [ %15, %10 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}

declare dso_local i64 @dm_noflush_suspending(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
